tests/testdata/test/parallel_output.out
Check [WILDCARD]/test/parallel_output.ts
./test/parallel_output.ts => step output ... step 1 ... ok ([WILDCARD]s)
./test/parallel_output.ts => step output ... step 2 ... ok ([WILDCARD]s)
------- output -------
Hello, world! (from step 3)
----- output end -----
./test/parallel_output.ts => step output ... step 3 ... ok ([WILDCARD]s)
------- output -------
Hello, world! (from step 4)
----- output end -----
./test/parallel_output.ts => step output ... step 4 ... ok ([WILDCARD]s)
./test/parallel_output.ts => step output ... ok ([WILDCARD]s)
./test/parallel_output.ts => step failures ... step 1 ... ok ([WILDCARD]s)
./test/parallel_output.ts => step failures ... step 2 ... FAILED ([WILDCARD]s)
./test/parallel_output.ts => step failures ... step 3 ... FAILED ([WILDCARD]s)
./test/parallel_output.ts => step failures ... FAILED (due to 2 failed steps) ([WILDCARD]s)
./test/parallel_output.ts => step nested failure ... step 1 ... inner 1 ... ok ([WILDCARD]s)
./test/parallel_output.ts => step nested failure ... step 1 ... inner 2 ... FAILED ([WILDCARD]s)
./test/parallel_output.ts => step nested failure ... step 1 ... FAILED (due to 1 failed step) ([WILDCARD]s)
./test/parallel_output.ts => step nested failure ... FAILED (due to 1 failed step) ([WILDCARD]s)

 ERRORS 

step failures ... step 2 => ./test/parallel_output.ts:14:11
error: Error: Fail.
    throw new Error("Fail.");
          ^
    at file:///[WILDCARD]/test/parallel_output.ts:15:11
    at [WILDCARD]
    at file:///[WILDCARD]/test/parallel_output.ts:14:11

step failures ... step 3 => ./test/parallel_output.ts:17:11
error: Error: Fail.
  await t.step("step 3", () => Promise.reject(new Error("Fail.")));
                                              ^
    at file:///[WILDCARD]/test/parallel_output.ts:17:47
    at [WILDCARD]
    at file:///[WILDCARD]/test/parallel_output.ts:17:11

step nested failure ... step 1 ... inner 2 => ./test/parallel_output.ts:23:13
error: Error: Failed.
      throw new Error("Failed.");
            ^
    at file:///[WILDCARD]/test/parallel_output.ts:24:13
    at [WILDCARD]
    at file:///[WILDCARD]/test/parallel_output.ts:23:13

 FAILURES 

step failures ... step 2 => ./test/parallel_output.ts:14:11
step failures ... step 3 => ./test/parallel_output.ts:17:11
step nested failure ... step 1 ... inner 2 => ./test/parallel_output.ts:23:13

FAILED | 1 passed (6 steps) | 2 failed (4 steps) ([WILDCARD]s)

error: Test failed
